# tictactoe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  project.rc
src/: board.cpp  board.h  bot.cpp  bot.h  main.cpp
src/include/: board.h
